# binance-trade-collector

./: .dockerignore  .env.example  Dockerfile  Makefile  assets.txt  main.py  pyproject.toml  test.py
docker_compose/: app.yaml  storages.yaml
src/domain/converters/: trade.py
src/domain/entities/: base.py  trade.py
src/domain/events/: base.py
src/infra/filesystem/: base.py  file_assets.py
src/infra/repositories/trade/: base.py  postgresql.py
src/infra/repositories/trade/models/: trade.py  trade_stat.py
src/infra/websockets/: exceptions.py  managers.py
src/logic/: init.py
src/logic/services/: base.py  shudeler.py  trade.py
src/settings/: config.py  logger.py
