[project]
name = "binance-trade-collector"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "betterlogging>=1.0.0",
    "pre-commit>=4.2.0",
    "punq>=0.7.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "tortoise-orm[asyncpg]>=0.25.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
